[package]
authors = ["Sharavanth <9451020+Sharavanth@users.noreply.github.com>"]
name = "cws-firmware"
edition = "2018"
version = "0.2.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
bit_field = "0.10.1"
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
pid = "3.0.0"
fugit = "0.3.6"
keypad = "0.2.2"
nb = "1.1.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103"]

[dependencies.lcd1602]
path = "../lcd1602"
features = ["defmt"]
[dependencies.max6675]
path = "../max6675"
[dependencies.muxhc4067]
path = "../muxhc4067"
features = ["defmt"]
[dependencies.modbus]
path = "../modbus"
features = ["defmt"]

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
strip = true             # Automatically strip symbols from the binary.
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
lto = 'fat'
opt-level = 3           # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
